fixed the alignnone class - missing the period

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -354,7 +354,7 @@ th {
     text-align: center;
     margin: $base-line-height auto;
 }
-alignnone {
+.alignnone {
     margin: $base-line-height;  
 }
 img,
